--- a/Juegos_IAIA.ipynb
+++ b/Juegos_IAIA.ipynb
@@ -10,11 +10,11 @@
     }
    },
    "cell_type": "markdown",
-   "id": "4fc9aafc",
    "metadata": {},
    "source": [
     "# IAIA Juegos\n",
     "---\n",
+    "### Nombres: Santiago Rochas, Sebastian Rojas\n",
     "---\n",
     "## Para la Implementación\n",
     "![image.png](attachment:image.png)\n",
@@ -22,13 +22,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Codigo implementación en árbol"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "509e4455",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Codigo implementación en árbol"
+    "class Node:\n",
+    "    def __init__(self, state, parent, action, pathCost):\n",
+    "        self.state = state\n",
+    "        self.parent = parent\n",
+    "        self.action = action\n",
+    "        self.pathCost = pathCost\n",
+    "    def getState(self):\n",
+    "        return self.state\n",
+    "    def getParent(self):\n",
+    "        return self.parent\n",
+    "    def getAction(self):\n",
+    "        return self.action\n",
+    "    def getPathCost(self):\n",
+    "        return self.pathCost\n",
+    "\n",
+    "class Problem:\n",
+    "    def __init__(self, ini, final, actions = {},player=None):\n",
+    "        self.ini = ini\n",
+    "        self.final = final\n",
+    "        self.actions = actions\n",
+    "        self.player = player\n",
+    "    def result(self, node, action):\n",
+    "        nodeR = node.doAction(action)\n",
+    "        return nodeR\n",
+    "\n",
+    "class HashTable:\n",
+    "    def __init__(self):\n",
+    "        self.data = {}\n",
+    "    def insert(self, key, value):\n",
+    "        try:\n",
+    "            self.data[key].append(value)\n",
+    "        except KeyError:\n",
+    "            self.data[key] = []\n",
+    "            self.data[key].append(value)\n",
+    "    def get(self, key):\n",
+    "        return self.data[key]\n",
+    "    def delete(self, key, value):\n",
+    "        self.data[key].remove(value)\n",
+    "    def __str__(self):\n",
+    "        return str(self.data)\n",
+    "    def printHashTable(self):\n",
+    "        for index in self.data:\n",
+    "            print('HashTable on index {} : {}'\n",
+    "                  .format(index, self.data[index]))"
    ]
   },
   {
@@ -38,7 +87,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "ba61e3ca",
    "metadata": {},
    "source": [
     "---\n",
@@ -52,7 +100,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cb0e2154",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +137,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "081f023a",
    "metadata": {
     "scrolled": true
    },
@@ -113,7 +159,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "38f4ab98",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +176,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e682edf3",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +193,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6c1577a1",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +210,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c9ca6097",
    "metadata": {
     "scrolled": true
    },
@@ -194,7 +236,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "0005dea2",
    "metadata": {},
    "source": [
     "---\n",
@@ -205,7 +246,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "8d963d98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +282,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "c52adfb8",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +301,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "8914c9fa",
    "metadata": {
     "scrolled": true
    },
@@ -285,7 +323,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ef61975f",
    "metadata": {
     "scrolled": true
    },
@@ -309,7 +346,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "d39458c6",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +371,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "7f8a76ac",
    "metadata": {},
    "source": [
     "---\n",
@@ -348,7 +383,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ef603de7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +457,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f1f16530",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +474,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ec5362e8",
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +491,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ab0a5e7f",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +508,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8c702fd2",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +525,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "78c429a0",
    "metadata": {
     "scrolled": true
    },
@@ -513,8 +542,186 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "10d5fa70",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "#### Cueatro en linea\n",
+    "![image.jpg](http://jugueteriamagic.com/wp-content/uploads/2021/03/3-18-768x652.jpg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Jugador:\n",
+    "    color = \"\"\n",
+    "    jugado = False\n",
+    "    \n",
+    "    def __init__(self, color):\n",
+    "        self.color = color\n",
+    "    \n",
+    "    def print_color(self):\n",
+    "        print(self.color)\n",
+    "        \n",
+    "    def print_jugado(self):\n",
+    "        print(self.jugado)\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return self.color\n",
+    "\n",
+    "jugador1 = Jugador(\"R\")\n",
+    "jugador2 = Jugador(\"Y\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "class Estado:\n",
+    "    tablero = \"\"\n",
+    "    jugador = None\n",
+    "    estado = [tablero, jugador]\n",
+    "    \n",
+    "    def print_tablero(self):\n",
+    "        print(self.tablero)\n",
+    "         \n",
+    "    def print_jugador(self):\n",
+    "        print(self.jugador)\n",
+    "        \n",
+    "    def print_estado(self):\n",
+    "        print(str(self.tablero))\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        impresion = \"[\" + str(self.tablero) + \", [\" + str(self.jugador) + \"]]\"\n",
+    "        return impresion\n",
+    "\n",
+    "    \n",
+    "TEstadoInicial = Estado()\n",
+    "TEstadoInicial.tablero = [[\"-\", \"-\", \"-\", \"-\", \"-\", \"-\", \"-\"],[\"-\", \"-\", \"-\", \"-\", \"-\", \"-\", \"-\"],[\"-\", \"-\", \"-\", \"-\", \"-\", \"-\", \"-\"],[\"-\", \"-\", \"-\", \"-\", \"-\", \"-\", \"-\"],[\"-\", \"-\", \"-\", \"-\", \"-\", \"-\", \"-\"],[\"-\", \"-\", \"-\", \"-\", \"-\", \"-\", \"-\"]]\n",
+    "\n",
+    "TEstadoInicial.jugador = jugador1\n",
+    "\n",
+    "\n",
+    "def inicialT():\n",
+    "    return TEstadoInicial\n",
+    "\n",
+    "def esFinalT(estado):\n",
+    "    esFinal = checkFourInLine()#return boolean\n",
+    "    return esFinal \n",
+    "\n",
+    "def printJugadorT(jugador):\n",
+    "    print(jugador)\n",
+    "    \n",
+    "def printEstadoT(estado):\n",
+    "    print(estado)    \n",
+    "    \n",
+    "def jugadorT(estado):\n",
+    "    return estado.jugador\n",
+    "\n",
+    "def oponenteT(jugador):\n",
+    "    if jugador.color == \"R\":\n",
+    "        return jugador2\n",
+    "    else:\n",
+    "        return jugador1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R\n"
+     ]
+    }
+   ],
+   "source": [
+    "printJugadorT(jugador1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Y\n"
+     ]
+    }
+   ],
+   "source": [
+    "printJugadorT(jugador2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[['-', '-', '-', '-', '-', '-', '-'], ['-', '-', '-', '-', '-', '-', '-'], ['-', '-', '-', '-', '-', '-', '-'], ['-', '-', '-', '-', '-', '-', '-'], ['-', '-', '-', '-', '-', '-', '-'], ['-', '-', '-', '-', '-', '-', '-']], [R]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "printEstadoT(inicialT())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R\n"
+     ]
+    }
+   ],
+   "source": [
+    "printJugadorT(jugadorT(inicialT()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Y\n"
+     ]
+    }
+   ],
+   "source": [
+    "printJugadorT(oponenteT(jugadorT(inicialT())))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Parte de la Implementación\n",
@@ -524,7 +731,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e7a9a62b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +771,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d82580b1",
    "metadata": {},
    "source": [
     "Con límite de profundidad"
@@ -574,7 +779,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "cec45997",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,17 +819,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92d5df00",
    "metadata": {},
    "source": [
-    "---\n",
-    "#### "
+    "---"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c922055e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -647,7 +848,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
