--- a/Juegos_IAIA.ipynb
+++ b/Juegos_IAIA.ipynb
@@ -10,11 +10,12 @@
     }
    },
    "cell_type": "markdown",
+   "id": "a6b15188",
    "metadata": {},
    "source": [
     "# IAIA Juegos\n",
     "---\n",
-    "### Nombres: Santiago Rochas, Sebastian Rojas\n",
+    "### Nombres: Santiago Rocha, Sebastian Rojas\n",
     "---\n",
     "## Para la Implementación\n",
     "![image.png](attachment:image.png)\n",
@@ -23,6 +24,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "713a1661",
    "metadata": {},
    "source": [
     "## Codigo implementación en árbol"
@@ -31,6 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "46781aa1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,6 +90,7 @@
     }
    },
    "cell_type": "markdown",
+   "id": "085ef963",
    "metadata": {},
    "source": [
     "---\n",
@@ -100,6 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "fc5c703f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,6 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "a62322d2",
    "metadata": {
     "scrolled": true
    },
@@ -159,6 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "51e4772a",
    "metadata": {},
    "outputs": [
     {
@@ -176,6 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "2c00d084",
    "metadata": {},
    "outputs": [
     {
@@ -193,6 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "57718d15",
    "metadata": {},
    "outputs": [
     {
@@ -210,6 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "bf0ba8a0",
    "metadata": {
     "scrolled": true
    },
@@ -236,6 +246,7 @@
     }
    },
    "cell_type": "markdown",
+   "id": "46a595f2",
    "metadata": {},
    "source": [
     "---\n",
@@ -246,6 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "b013233f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,6 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
+   "id": "298a2fb5",
    "metadata": {},
    "outputs": [
     {
@@ -301,6 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "bda7af7e",
    "metadata": {
     "scrolled": true
    },
@@ -323,6 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
+   "id": "fa64d662",
    "metadata": {
     "scrolled": true
    },
@@ -346,6 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
+   "id": "f51847a0",
    "metadata": {},
    "outputs": [
     {
@@ -371,6 +387,7 @@
     }
    },
    "cell_type": "markdown",
+   "id": "b1ddbd6d",
    "metadata": {},
    "source": [
     "---\n",
@@ -383,6 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "55b130d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,6 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "c9db4e5c",
    "metadata": {},
    "outputs": [
     {
@@ -474,6 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "fa289318",
    "metadata": {},
    "outputs": [
     {
@@ -491,6 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "88725f44",
    "metadata": {},
    "outputs": [
     {
@@ -508,6 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "eef6f872",
    "metadata": {},
    "outputs": [
     {
@@ -525,6 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "637bd8d5",
    "metadata": {
     "scrolled": true
    },
@@ -542,8 +565,8 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
+   "id": "76bffe32",
    "metadata": {},
    "source": [
     "---\n",
@@ -555,6 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "d7dbd9df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,6 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "9c97c970",
    "metadata": {},
    "outputs": [
     {
@@ -647,6 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "c05f9619",
    "metadata": {
     "scrolled": true
    },
@@ -666,6 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "97a64885",
    "metadata": {
     "scrolled": true
    },
@@ -685,6 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "e1de549b",
    "metadata": {
     "scrolled": true
    },
@@ -704,6 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "702a71a0",
    "metadata": {
     "scrolled": true
    },
@@ -722,6 +751,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "847d35d6",
    "metadata": {},
    "source": [
     "#### Parte de la Implementación\n",
@@ -731,6 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "6287ea90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,6 +802,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a62035f8",
    "metadata": {},
    "source": [
     "Con límite de profundidad"
@@ -779,6 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "b31c6d56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,14 +852,329 @@
   },
   {
    "cell_type": "markdown",
+   "id": "258ed2f1",
    "metadata": {},
    "source": [
-    "---"
+    "---\n",
+    "---\n",
+    "---\n",
+    "---\n",
+    "# Laboratorio!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "7056a19c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TEstado:\n",
+    "    def __init__(self, estado, hs):\n",
+    "        self.estado = estado\n",
+    "        self.hs = hs\n",
+    "        self.sucesores = []\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        impresion = \"Estado: \" + str(self.estado) + \"\\nSucesores: [ \"\n",
+    "        for suc in self.sucesores:\n",
+    "            impresion = impresion + str(suc.estado) + \" \"\n",
+    "        impresion = impresion + \"]\"\n",
+    "        return impresion\n",
+    "\n",
+    "    def defSucesores(self, sucesores, caminos):\n",
+    "        self.sucesores = sucesores\n",
+    "        self.caminos = caminos\n",
+    "        \n",
+    "s = TEstado(\"s\", 11)\n",
+    "a = TEstado(\"a\", 10.4)\n",
+    "b = TEstado(\"b\", 6.7)\n",
+    "c = TEstado(\"c\", 4.0)\n",
+    "d = TEstado(\"d\", 8.9)\n",
+    "e = TEstado(\"e\", 6.9)\n",
+    "f = TEstado(\"f\", 3.0)\n",
+    "g = TEstado(\"g\", 0.0)\n",
+    "\n",
+    "s.defSucesores([a, d], [3, 4])\n",
+    "a.defSucesores([s, d, b], [3, 5, 4])\n",
+    "b.defSucesores([a, e, c], [4, 5, 4])\n",
+    "c.defSucesores([b], [4])\n",
+    "d.defSucesores([e, a, s], [2, 5, 4])\n",
+    "e.defSucesores([d, b, f], [2, 5, 4])\n",
+    "f.defSucesores([g, e], [3, 4])\n",
+    "g.defSucesores([f], [3])\n",
+    "\n",
+    "    \n",
+    "def inicial():\n",
+    "    return s\n",
+    "\n",
+    "def sucesores(estado):\n",
+    "    return estado.sucesores\n",
+    "\n",
+    "def esExito(estado):\n",
+    "    return estado is g\n",
+    "\n",
+    "def avance(est1, est2):\n",
+    "    costo = None\n",
+    "    if (est2 in est1.sucesores):\n",
+    "        index = est1.sucesores.index(est2)\n",
+    "        costo = est1.caminos[index]        \n",
+    "    return costo\n",
+    "\n",
+    "def estimado(estado):\n",
+    "    return estado.hs\n",
+    "\n",
+    "def printEstadoT(estado):\n",
+    "    print(estado)\n",
+    "    \n",
+    "def printSucesores(sucesores):\n",
+    "    [print(str(x.estado)) for x in sucesores]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "abc6c5ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estado: s\n",
+      "Sucesores: [ a d ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "printEstadoT(inicial())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "22faf092",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s\n",
+      "d\n",
+      "b\n"
+     ]
+    }
+   ],
+   "source": [
+    "printSucesores(sucesores(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "1b7649bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "esExito(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "9c0fa81a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "esExito(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "153e947a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "avance(e, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "b989e455",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avance(e, c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "2ab1efb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estimado(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "394f4505",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.7"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estimado(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "7594690c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estimado(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "6fa9b715",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hillClimbing(estado):\n",
+    "    recorrido = []\n",
+    "    #sucesores = estado.sucesores.sort()\n",
+    "    if not esExito(estado):\n",
+    "        print(\"No\")\n",
+    "        recorrido = [\"Un camino\"]\n",
+    "    return recorrido"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "a43525d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['Un camino']"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hillClimbing(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "86036341",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hillClimbing(g)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8f342fcf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -834,7 +1182,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -848,7 +1196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
