DFS implementado y funcional

--- a/Juegos_IAIA.ipynb
+++ b/Juegos_IAIA.ipynb
@@ -10,12 +10,11 @@
     }
    },
    "cell_type": "markdown",
-   "id": "a6b15188",
+   "id": "4fc9aafc",
    "metadata": {},
    "source": [
     "# IAIA Juegos\n",
     "---\n",
-    "### Nombres: Santiago Rocha, Sebastian Rojas\n",
     "---\n",
     "## Para la Implementación\n",
     "![image.png](attachment:image.png)\n",
@@ -23,64 +22,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "713a1661",
-   "metadata": {},
-   "source": [
-    "## Codigo implementación en árbol"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "46781aa1",
+   "execution_count": 1,
+   "id": "509e4455",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Node:\n",
-    "    def __init__(self, state, parent, action, pathCost):\n",
-    "        self.state = state\n",
-    "        self.parent = parent\n",
-    "        self.action = action\n",
-    "        self.pathCost = pathCost\n",
-    "    def getState(self):\n",
-    "        return self.state\n",
-    "    def getParent(self):\n",
-    "        return self.parent\n",
-    "    def getAction(self):\n",
-    "        return self.action\n",
-    "    def getPathCost(self):\n",
-    "        return self.pathCost\n",
-    "\n",
-    "class Problem:\n",
-    "    def __init__(self, ini, final, actions = {},player=None):\n",
-    "        self.ini = ini\n",
-    "        self.final = final\n",
-    "        self.actions = actions\n",
-    "        self.player = player\n",
-    "    def result(self, node, action):\n",
-    "        nodeR = node.doAction(action)\n",
-    "        return nodeR\n",
-    "\n",
-    "class HashTable:\n",
-    "    def __init__(self):\n",
-    "        self.data = {}\n",
-    "    def insert(self, key, value):\n",
-    "        try:\n",
-    "            self.data[key].append(value)\n",
-    "        except KeyError:\n",
-    "            self.data[key] = []\n",
-    "            self.data[key].append(value)\n",
-    "    def get(self, key):\n",
-    "        return self.data[key]\n",
-    "    def delete(self, key, value):\n",
-    "        self.data[key].remove(value)\n",
-    "    def __str__(self):\n",
-    "        return str(self.data)\n",
-    "    def printHashTable(self):\n",
-    "        for index in self.data:\n",
-    "            print('HashTable on index {} : {}'\n",
-    "                  .format(index, self.data[index]))"
+    "#Codigo implementación en árbol"
    ]
   },
   {
@@ -90,7 +38,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "085ef963",
+   "id": "ba61e3ca",
    "metadata": {},
    "source": [
     "---\n",
@@ -104,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fc5c703f",
+   "id": "cb0e2154",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a62322d2",
+   "id": "081f023a",
    "metadata": {
     "scrolled": true
    },
@@ -165,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "51e4772a",
+   "id": "38f4ab98",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2c00d084",
+   "id": "e682edf3",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "57718d15",
+   "id": "6c1577a1",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bf0ba8a0",
+   "id": "c9ca6097",
    "metadata": {
     "scrolled": true
    },
@@ -246,7 +194,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "46a595f2",
+   "id": "0005dea2",
    "metadata": {},
    "source": [
     "---\n",
@@ -257,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b013233f",
+   "id": "8d963d98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "298a2fb5",
+   "id": "c52adfb8",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "bda7af7e",
+   "id": "8914c9fa",
    "metadata": {
     "scrolled": true
    },
@@ -337,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "fa64d662",
+   "id": "ef61975f",
    "metadata": {
     "scrolled": true
    },
@@ -361,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "f51847a0",
+   "id": "d39458c6",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +335,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "b1ddbd6d",
+   "id": "7f8a76ac",
    "metadata": {},
    "source": [
     "---\n",
@@ -400,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "55b130d6",
+   "id": "ef603de7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c9db4e5c",
+   "id": "f1f16530",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fa289318",
+   "id": "ec5362e8",
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "88725f44",
+   "id": "ab0a5e7f",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "eef6f872",
+   "id": "8c702fd2",
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "637bd8d5",
+   "id": "78c429a0",
    "metadata": {
     "scrolled": true
    },
@@ -566,192 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76bffe32",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "---\n",
-    "#### Cueatro en linea\n",
-    "![image.jpg](http://jugueteriamagic.com/wp-content/uploads/2021/03/3-18-768x652.jpg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "d7dbd9df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Jugador:\n",
-    "    color = \"\"\n",
-    "    jugado = False\n",
-    "    \n",
-    "    def __init__(self, color):\n",
-    "        self.color = color\n",
-    "    \n",
-    "    def print_color(self):\n",
-    "        print(self.color)\n",
-    "        \n",
-    "    def print_jugado(self):\n",
-    "        print(self.jugado)\n",
-    "    \n",
-    "    def __str__(self):\n",
-    "        return self.color\n",
-    "\n",
-    "jugador1 = Jugador(\"R\")\n",
-    "jugador2 = Jugador(\"Y\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "class Estado:\n",
-    "    tablero = \"\"\n",
-    "    jugador = None\n",
-    "    estado = [tablero, jugador]\n",
-    "    \n",
-    "    def print_tablero(self):\n",
-    "        print(self.tablero)\n",
-    "         \n",
-    "    def print_jugador(self):\n",
-    "        print(self.jugador)\n",
-    "        \n",
-    "    def print_estado(self):\n",
-    "        print(str(self.tablero))\n",
-    "    \n",
-    "    def __str__(self):\n",
-    "        impresion = \"[\" + str(self.tablero) + \", [\" + str(self.jugador) + \"]]\"\n",
-    "        return impresion\n",
-    "\n",
-    "    \n",
-    "TEstadoInicial = Estado()\n",
-    "TEstadoInicial.tablero = [[\"-\", \"-\", \"-\", \"-\", \"-\", \"-\", \"-\"],[\"-\", \"-\", \"-\", \"-\", \"-\", \"-\", \"-\"],[\"-\", \"-\", \"-\", \"-\", \"-\", \"-\", \"-\"],[\"-\", \"-\", \"-\", \"-\", \"-\", \"-\", \"-\"],[\"-\", \"-\", \"-\", \"-\", \"-\", \"-\", \"-\"],[\"-\", \"-\", \"-\", \"-\", \"-\", \"-\", \"-\"]]\n",
-    "\n",
-    "TEstadoInicial.jugador = jugador1\n",
-    "\n",
-    "\n",
-    "def inicialT():\n",
-    "    return TEstadoInicial\n",
-    "\n",
-    "def esFinalT(estado):\n",
-    "    esFinal = checkFourInLine()#return boolean\n",
-    "    return esFinal \n",
-    "\n",
-    "def printJugadorT(jugador):\n",
-    "    print(jugador)\n",
-    "    \n",
-    "def printEstadoT(estado):\n",
-    "    print(estado)    \n",
-    "    \n",
-    "def jugadorT(estado):\n",
-    "    return estado.jugador\n",
-    "\n",
-    "def oponenteT(jugador):\n",
-    "    if jugador.color == \"R\":\n",
-    "        return jugador2\n",
-    "    else:\n",
-    "        return jugador1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "9c97c970",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "R\n"
-     ]
-    }
-   ],
-   "source": [
-    "printJugadorT(jugador1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "c05f9619",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Y\n"
-     ]
-    }
-   ],
-   "source": [
-    "printJugadorT(jugador2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "97a64885",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[['-', '-', '-', '-', '-', '-', '-'], ['-', '-', '-', '-', '-', '-', '-'], ['-', '-', '-', '-', '-', '-', '-'], ['-', '-', '-', '-', '-', '-', '-'], ['-', '-', '-', '-', '-', '-', '-'], ['-', '-', '-', '-', '-', '-', '-']], [R]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "printEstadoT(inicialT())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "e1de549b",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "R\n"
-     ]
-    }
-   ],
-   "source": [
-    "printJugadorT(jugadorT(inicialT()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "702a71a0",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Y\n"
-     ]
-    }
-   ],
-   "source": [
-    "printJugadorT(oponenteT(jugadorT(inicialT())))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "847d35d6",
+   "id": "10d5fa70",
    "metadata": {},
    "source": [
     "#### Parte de la Implementación\n",
@@ -761,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6287ea90",
+   "id": "e7a9a62b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a62035f8",
+   "id": "d82580b1",
    "metadata": {},
    "source": [
     "Con límite de profundidad"
@@ -811,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b31c6d56",
+   "id": "cec45997",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,329 +615,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "258ed2f1",
+   "id": "92d5df00",
    "metadata": {},
    "source": [
     "---\n",
-    "---\n",
-    "---\n",
-    "---\n",
-    "# Laboratorio!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "7056a19c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class TEstado:\n",
-    "    def __init__(self, estado, hs):\n",
-    "        self.estado = estado\n",
-    "        self.hs = hs\n",
-    "        self.sucesores = []\n",
-    "    \n",
-    "    def __str__(self):\n",
-    "        impresion = \"Estado: \" + str(self.estado) + \"\\nSucesores: [ \"\n",
-    "        for suc in self.sucesores:\n",
-    "            impresion = impresion + str(suc.estado) + \" \"\n",
-    "        impresion = impresion + \"]\"\n",
-    "        return impresion\n",
-    "\n",
-    "    def defSucesores(self, sucesores, caminos):\n",
-    "        self.sucesores = sucesores\n",
-    "        self.caminos = caminos\n",
-    "        \n",
-    "s = TEstado(\"s\", 11)\n",
-    "a = TEstado(\"a\", 10.4)\n",
-    "b = TEstado(\"b\", 6.7)\n",
-    "c = TEstado(\"c\", 4.0)\n",
-    "d = TEstado(\"d\", 8.9)\n",
-    "e = TEstado(\"e\", 6.9)\n",
-    "f = TEstado(\"f\", 3.0)\n",
-    "g = TEstado(\"g\", 0.0)\n",
-    "\n",
-    "s.defSucesores([a, d], [3, 4])\n",
-    "a.defSucesores([s, d, b], [3, 5, 4])\n",
-    "b.defSucesores([a, e, c], [4, 5, 4])\n",
-    "c.defSucesores([b], [4])\n",
-    "d.defSucesores([e, a, s], [2, 5, 4])\n",
-    "e.defSucesores([d, b, f], [2, 5, 4])\n",
-    "f.defSucesores([g, e], [3, 4])\n",
-    "g.defSucesores([f], [3])\n",
-    "\n",
-    "    \n",
-    "def inicial():\n",
-    "    return s\n",
-    "\n",
-    "def sucesores(estado):\n",
-    "    return estado.sucesores\n",
-    "\n",
-    "def esExito(estado):\n",
-    "    return estado is g\n",
-    "\n",
-    "def avance(est1, est2):\n",
-    "    costo = None\n",
-    "    if (est2 in est1.sucesores):\n",
-    "        index = est1.sucesores.index(est2)\n",
-    "        costo = est1.caminos[index]        \n",
-    "    return costo\n",
-    "\n",
-    "def estimado(estado):\n",
-    "    return estado.hs\n",
-    "\n",
-    "def printEstadoT(estado):\n",
-    "    print(estado)\n",
-    "    \n",
-    "def printSucesores(sucesores):\n",
-    "    [print(str(x.estado)) for x in sucesores]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "id": "abc6c5ec",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Estado: s\n",
-      "Sucesores: [ a d ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "printEstadoT(inicial())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "22faf092",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "s\n",
-      "d\n",
-      "b\n"
-     ]
-    }
-   ],
-   "source": [
-    "printSucesores(sucesores(a))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "id": "1b7649bb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "esExito(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "id": "9c0fa81a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "esExito(g)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "id": "153e947a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "avance(e, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "id": "b989e455",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "avance(e, c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "id": "2ab1efb9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "estimado(s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "id": "394f4505",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6.7"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "estimado(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "id": "7594690c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "estimado(g)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "id": "6fa9b715",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def hillClimbing(estado):\n",
-    "    recorrido = []\n",
-    "    #sucesores = estado.sucesores.sort()\n",
-    "    if not esExito(estado):\n",
-    "        print(\"No\")\n",
-    "        recorrido = [\"Un camino\"]\n",
-    "    return recorrido"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "id": "a43525d2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['Un camino']"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hillClimbing(s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "id": "86036341",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hillClimbing(g)"
+    "#### "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f342fcf",
+   "id": "c922055e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1182,7 +633,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1196,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
